added /user/problems endpoint so you can get all generated problems for the user
